--- a/public/index.html
+++ b/public/index.html
@@ -725,17 +725,17 @@
             <h3 class="page-title white-text teal">Projects</h3>
             <div class="container">
               <div class="row">
-                <!--Nextjs+ tailwindcss shopify headless commerce -->
-                <div class="col s12 m6 l4">
+                 <!--Nextjs+ tailwindcss shopify headless commerce -->
+                 <div class="col s12 m6 l4">
                   <div class="card medium">
                     <div class="card-image waves-effect waves-block waves-light">
                       <img alt="yelpcamp screenshot"
-                           src="assets/img/shopify-headless.png"
+                           src="assets/img/gemme-moi.png"
                            class="activator" />   
                     </div>
                     <div class="card-content">
-                      <span class="card-title activator teal-text hoverline">NextJS + Shopify + TailwindCSS<i class="mdi-navigation-more-vert right"></i></span>
-                      <p>Shopify headless ecommerce store created with nextjs as front end and tailwind css for performance optimization</p>
+                      <span class="card-title activator teal-text hoverline">Gemme Moi<i class="mdi-navigation-more-vert right"></i></span>
+                      <p>Quebec Based Startup company that sells stickers</p>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title brown-text">
@@ -743,14 +743,60 @@
                       </span>
                       <ul>
                         <li><strong>Shopify</strong> Backend</li>
-                        <li><strong>Nextjs</strong> Front End</li>
+                        <li><strong>Shopify</strong> Front End</li>
+                        <li><strong>WCAG</strong> Accessibility</li>
+                        <li><strong>Performance</strong> Optimization</li>
+                        <li><strong>Github</strong> Version Control</li>
+                      </ul>
+                      <div class="card-action">
+                        <a  aria-label="Visit Headless Shopify Store"
+                            href="https://gemmemoi.ca/"
+                            target="_blank"
+                            data-position="top"
+                            data-tooltip="View Online"
+                            class="btn-floating btn-large waves-effect waves-light brown tooltipped">
+                          <i class="fa fa-external-link"></i>
+                          </a>
+                         <a  aria-label="Visit Shopify headless Github"
+                          href="https://github.com/EssDeeJay/nextjs-shopify-headless
+                          target="_blank"
+                          data-position="top"
+                          data-tooltip="View Source"
+                          class="btn-floating btn-large waves-effect waves-light brown tooltipped">
+                        <i class="fa fa-github"></i>
+                        </a>
+                        
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-------------------------------------------->
+                <!--Nextjs+ tailwindcss shopify headless commerce -->
+                <div class="col s12 m6 l4">
+                  <div class="card medium">
+                    <div class="card-image waves-effect waves-block waves-light">
+                      <img alt="yelpcamp screenshot"
+                           src="assets/img/vraj-co.png"
+                           class="activator" />   
+                    </div>
+                    <div class="card-content">
+                      <span class="card-title activator teal-text hoverline">Vraj& Co.<i class="mdi-navigation-more-vert right"></i></span>
+                      <p>Amazing Spices Wholesaler Based in New Zealand Brand Website Design + Development</p>
+                    </div>
+                    <div class="card-reveal">
+                      <span class="card-title brown-text">
+                       Accomplishments<i class="mdi-navigation-close right"></i>
+                      </span>
+                      <ul>
+                        <li><strong>Shopify</strong> Backend</li>
+                        <li><strong>Shopify</strong> Front End</li>
                         <li><strong>TailwindCSS</strong> UI Design</li>
                         <li><strong>Vercel</strong> Deployment</li>
                         <li><strong>Github</strong> Version Control</li>
                       </ul>
                       <div class="card-action">
                         <a  aria-label="Visit Headless Shopify Store"
-                            href="https://shopify-headless-shreyank.vercel.app/"
+                            href="https://vraj.co.nz/"
                             target="_blank"
                             data-position="top"
                             data-tooltip="View Online"
@@ -874,7 +920,7 @@
                     </div>
                     <div class="card-content">
                       <span class="card-title activator teal-text hoverline">TCH Hardware Shopify Migration<i class="mdi-navigation-more-vert right"></i></span>
-                      <p>Successfully Migrated the sister company of umbra from Bigcommerce to shopify with the unique features of request a quote and many more</p>
+                      <p>Successfully Migrated the sister company of umbra from Bigcommerce to shopify with the unique features of request a quote + many more</p>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title brown-text">
